--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -35,42 +35,42 @@
         </property>
         <layout class="QGridLayout" name="controlModeGrid">
          <item row="1" column="0">
-          <widget class="QPushButton" name="pushButton">
+          <widget class="QPushButton" name="rainbowButton">
            <property name="text">
             <string>Rainbow</string>
            </property>
           </widget>
          </item>
          <item row="3" column="0">
-          <widget class="QPushButton" name="pushButton_2">
+          <widget class="QPushButton" name="flashButton">
            <property name="text">
             <string>Flash</string>
            </property>
           </widget>
          </item>
          <item row="2" column="0">
-          <widget class="QPushButton" name="pushButton_3">
+          <widget class="QPushButton" name="strobeButton">
            <property name="text">
             <string>Strobe</string>
            </property>
           </widget>
          </item>
          <item row="1" column="1">
-          <widget class="QPushButton" name="pushButton_4">
+          <widget class="QPushButton" name="chaseButton">
            <property name="text">
             <string>Chase</string>
            </property>
           </widget>
          </item>
          <item row="3" column="1">
-          <widget class="QPushButton" name="pushButton_6">
+          <widget class="QPushButton" name="testButton">
            <property name="text">
             <string>Test</string>
            </property>
           </widget>
          </item>
          <item row="2" column="1">
-          <widget class="QPushButton" name="pushButton_5">
+          <widget class="QPushButton" name="wipeButton">
            <property name="text">
             <string>Wipe</string>
            </property>
